test/corpus/compound_types.txt
================================================================================
array of closures
================================================================================

(bind-func my-test-10
  (lambda (v:|5,[i64,i64]*|*)
    (let ((ff (aref v 0)))
      (ff 5))))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (list
        (typed_identifier))
      (list
        (symbol)
        (list
          (list
            (symbol)
            (list
              (symbol)
              (symbol)
              (number))))
        (list
          (symbol)
          (number))))))

================================================================================
array of closures standalone
================================================================================

(bind-val handlers |8,[void,i64]*|*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
deeply nested arrays in tuple
================================================================================

(bind-type tuple-with-array <double,|32,|4,i32||,float>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
closure returning pointer to closures
================================================================================

(bind-func envelope-segments
  (lambda (points:double* num-of-points:i64)
    (let ((lines:[double,double]** (zone-alloc num-of-points)))
      lines)))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (list
        (symbol)
        (symbol))
      (list
        (symbol)
        (list
          (list
            (typed_identifier)
            (list
              (symbol)
              (symbol))))
        (symbol)))))

================================================================================
bind-val with tuple type no value
================================================================================

(bind-val g_tuple1 <i64,i64>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
bind-val with array type no value
================================================================================

(bind-val g_array1 |10,double|)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
bind-val pointer to array type
================================================================================

(bind-val g_ptr1 |4,i32|* 2)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)
    (number)))

================================================================================
bind-val pointer to tuple type
================================================================================

(bind-val g_ptr2 <i64,double>* 4)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)
    (number)))

================================================================================
recursive named type
================================================================================

(bind-type list_t <i64,list_t*>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
typed identifier with queue type
================================================================================

(lambda (queue:|2,list_t*|*)
  (aref queue 0))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (typed_identifier))
    (list
      (symbol)
      (symbol)
      (number))))

================================================================================
bind-func with zone allocation size
================================================================================

(bind-func test39 1000000
  (let ((k:|100000,double|* (zalloc)))
    (lambda ()
      (aref k 0))))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (number)
    (list
      (symbol)
      (list
        (list
          (typed_identifier)
          (list
            (symbol))))
      (list
        (symbol)
        (list)
        (list
          (symbol)
          (symbol)
          (number))))))

================================================================================
callback with typed arguments
================================================================================

(bind-func test34
  (lambda (time:i64 count:i64)
    (callback (+ time 1000) test34 (+ time 22050) (+ count 1))))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (list
        (symbol)
        (symbol))
      (list
        (symbol)
        (list
          (symbol)
          (symbol)
          (number))
        (symbol)
        (list
          (symbol)
          (symbol)
          (number))
        (list
          (symbol)
          (symbol)
          (number))))))

================================================================================
cast expression
================================================================================

(cast list1 i8*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)))

================================================================================
large array type
================================================================================

(bind-val g_array3 |100000000,i64|)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))
