test/corpus/scheme_forms.txt
================================================================================
define variable
================================================================================

(define x 42)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (number)))

================================================================================
define function shorthand
================================================================================

(define (square x) (* x x))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
define boolean
================================================================================

(define *loaded* #t)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (boolean)))

================================================================================
lambda expression
================================================================================

(lambda (x y) (+ x y))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
let binding
================================================================================

(let ((x 1) (y 2))
  (+ x y))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (symbol)
        (number))
      (list
        (symbol)
        (number)))
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
let* binding
================================================================================

(let* ((x 1)
       (y (+ x 1)))
  y)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (symbol)
        (number))
      (list
        (symbol)
        (list
          (symbol)
          (symbol)
          (number))))
    (symbol)))

================================================================================
letrec binding
================================================================================

(letrec ((even? (lambda (n) (if (= n 0) #t (odd? (- n 1)))))
         (odd?  (lambda (n) (if (= n 0) #f (even? (- n 1))))))
  (even? 10))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (symbol)
        (list
          (symbol)
          (list
            (symbol))
          (list
            (symbol)
            (list
              (symbol)
              (symbol)
              (number))
            (boolean)
            (list
              (symbol)
              (list
                (symbol)
                (symbol)
                (number))))))
      (list
        (symbol)
        (list
          (symbol)
          (list
            (symbol))
          (list
            (symbol)
            (list
              (symbol)
              (symbol)
              (number))
            (boolean)
            (list
              (symbol)
              (list
                (symbol)
                (symbol)
                (number)))))))
    (list
      (symbol)
      (number))))

================================================================================
if expression
================================================================================

(if (> x 0) "positive" "non-positive")

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol)
      (symbol)
      (number))
    (string)
    (string)))

================================================================================
cond expression
================================================================================

(cond ((= x 1) "one")
      ((= x 2) "two")
      (else "other"))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (symbol)
        (symbol)
        (number))
      (string))
    (list
      (list
        (symbol)
        (symbol)
        (number))
      (string))
    (list
      (symbol)
      (string))))

================================================================================
begin block
================================================================================

(begin
  (println "hello")
  (println "world")
  42)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol)
      (string))
    (list
      (symbol)
      (string))
    (number)))

================================================================================
set! mutation
================================================================================

(set! x (+ x 1))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (symbol)
      (number))))

================================================================================
do loop
================================================================================

(do ((i 0 (+ i 1)))
    ((= i 10) void)
  (println i))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (symbol)
        (number)
        (list
          (symbol)
          (symbol)
          (number))))
    (list
      (list
        (symbol)
        (symbol)
        (number))
      (symbol))
    (list
      (symbol)
      (symbol))))

================================================================================
apply and map
================================================================================

(apply + (list 1 2 3))
(map (lambda (x) (* x x)) (list 1 2 3))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (list
      (symbol)
      (number)
      (number)
      (number)))
  (list
    (symbol)
    (list
      (symbol)
      (list
        (symbol))
      (list
        (symbol)
        (symbol)
        (symbol)))
    (list
      (symbol)
      (number)
      (number)
      (number))))
