test/corpus/xtlang_types.txt
================================================================================
standalone closure type
================================================================================

(bind-lib libm sin [double,double]*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
standalone tuple type
================================================================================

(bind-type vec3 <double,double,double>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
standalone array type
================================================================================

(bind-val data |4,float|*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
standalone vector type
================================================================================

(bind-val data /4,float/*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
nested type: tuple containing closure
================================================================================

(bind-type Foo <[void,i8*]*,double>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
nested type: tuple containing array
================================================================================

(bind-type Bar <|16,float|>)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
typed identifier: closure type
================================================================================

(bind-func add:[i64,i64,i64]*
  (lambda (a b) (+ a b)))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (typed_identifier)
    (list
      (symbol)
      (list
        (symbol)
        (symbol))
      (list
        (symbol)
        (symbol)
        (symbol)))))

================================================================================
typed identifier: tuple type
================================================================================

(let ((p:<double,double>* (alloc)))
  p)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (typed_identifier)
        (list
          (symbol))))
    (symbol)))

================================================================================
typed identifier: array type
================================================================================

(let ((a:|4,float|* (alloc)))
  a)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (typed_identifier)
        (list
          (symbol))))
    (symbol)))

================================================================================
typed identifier: vector type
================================================================================

(let ((v:/4,float/* (alloc)))
  v)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (list
        (typed_identifier)
        (list
          (symbol))))
    (symbol)))

================================================================================
generic identifier: single param
================================================================================

(bind-data ADPoint{!a}
           (ADPoint2D !a !a))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (generic_identifier)
    (list
      (symbol)
      (symbol)
      (symbol))))

================================================================================
generic identifier: multiple params with comma
================================================================================

(bind-data ADEither{!a,!b}
           (ADLeft !a)
           (ADRight !b))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (generic_identifier)
    (list
      (symbol)
      (symbol))
    (list
      (symbol)
      (symbol))))

================================================================================
generic identifier: with pointer
================================================================================

(ADCons !a ADList{!a}*)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (generic_identifier)))

================================================================================
edge case: string->number remains a symbol
================================================================================

(string->number "42")

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (string)))

================================================================================
edge case: sys:platform remains a symbol
================================================================================

(sys:platform)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)))

================================================================================
edge case: greater-than in expression
================================================================================

(> x 0)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (number)))

================================================================================
edge case: less-than in expression
================================================================================

(< a b)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)))

================================================================================
edge case: less-than with identifier (no space)
================================================================================

(if (< time-point time) a b)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol)
      (symbol)
      (symbol))
    (symbol)
    (symbol)))

================================================================================
edge case: division in expression
================================================================================

(/ 10 2)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (number)
    (number)))

================================================================================
edge case: multiplication in expression
================================================================================

(* a b)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (symbol)))

================================================================================
edge case: x:i64 remains a symbol
================================================================================

(lambda (x:i64) x)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (list
      (symbol))
    (symbol)))

================================================================================
edge case: quoting still works
================================================================================

`(a ,b ,@c)

--------------------------------------------------------------------------------

(program
  (quasiquote
    (list
      (symbol)
      (unquote
        (symbol))
      (unquote_splicing
        (symbol)))))

================================================================================
typed identifier with generic type in closure
================================================================================

(bind-func second:[!b,Pair{!a,!b}*]*
  (lambda (a) (tref a 1)))

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (typed_identifier)
    (list
      (symbol)
      (list
        (symbol))
      (list
        (symbol)
        (symbol)
        (number)))))

================================================================================
multiple pointer stars on type
================================================================================

(bind-val data <i8*,i64>**)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)
    (xtlang_type)))

================================================================================
edge case: closure env access with bracket type
================================================================================

(t2.f:[i64,i64]* (lambda (y:i64) (* y y y)))

--------------------------------------------------------------------------------

(program
  (list
    (typed_identifier)
    (list
      (symbol)
      (list
        (symbol))
      (list
        (symbol)
        (symbol)
        (symbol)
        (symbol)))))

================================================================================
pipe as symbol (not array without digit)
================================================================================

(|a| b)

--------------------------------------------------------------------------------

(program
  (list
    (symbol)
    (symbol)))
